@@ -13,6 +13,14 @@
 (require 'aider-file)
 (require 'which-func)
 
+(defcustom aider-todo-keyword-pair '("TODO" . "comment line START with string: TODO:")
+  "Pair of keyword and its definition for `aider-implement-todo`.
+The car is the keyword string to search for in comments.
+The cdr is the description of what these comments represent.
+Another common choice is (\"AI!\" . \"comment line ending with string: AI!\")."
+  :type '(cons string string)
+  :group 'aider)
+
 ;; New function to get command from user and send it prefixed with "/code "
 ;;;###autoload
 (defun aider-code-change ()
@@ -49,19 +57,20 @@ Otherwise, refactor the function under cursor."
          (region-active (region-active-p))
          (region-in-function (and region-active function-name))
          (prompt (cond
-                  (region-in-function (format "Refactor instruction for selected region in function '%s': " function-name))
-                  (function-name (format "Refactor %s: " function-name))
+                  (region-in-function (format "Code change instruction for selected region in function '%s': " function-name))
+                  (function-name (format "Change %s: " function-name))
                   (region-active "Refactor instruction for selected region: ")
                   (t "Refactor instruction: ")))
-         (candidate-list '("Simplify this code while preserving functionality"
-                          "Extract this logic into a separate helper function"
-                          "Optimize this code for better performance"
-                          "Improve error handling and edge cases"
-                          "Refactor to reduce complexity and improve readability"
-                          "Refactor this test, using better testing patterns, reducing duplication, and improving readability and maintainability. Maintain the current functionality of the tests."
-                          "Make this code more maintainable and easier to test"
+         (candidate-list '("implement the function given description and hint in comment, make it be able to pass all unit-tests if there is"
+                          "Simplify this code, reduce complexity and improve readability, while preserving functionality"
                           "Fix potential bugs or issues in this code"
-                          "Improve variable names and add clarifying comments"))
+                          "Make this code more maintainable and easier to test"
+                          "Improve error handling and edge cases"
+                          "Refactor this test, using better testing patterns, reducing duplication, and improving readability and maintainability. Maintain the current functionality of the tests."
+                          "This test failed. Please analyze and fix the source code functions to make this test pass without changing the test itself. Don't break any other test"
+                          "Optimize this code for better performance"
+                          "Extract this logic into a separate helper function"
+                          ))
          (instruction (aider-read-string prompt nil candidate-list))
          (region-text (and region-active
                            (buffer-substring-no-properties (region-beginning) (region-end)))))
@@ -94,11 +103,13 @@ ignoring leading whitespace."
 
 ;;;###autoload
 (defun aider-implement-todo ()
-  "Implement TODO comments in current context.
+  "Implement comments with configured keyword in current context.
 If region is selected, implement that specific region.
-If cursor is on a comment line, implement that specific comment.
-If cursor is inside a function, implement TODOs for that function.
-Otherwise implement TODOs for the entire current file."
+If cursor is on a comment line with the configured keyword, implement that specific comment.
+If cursor is inside a function, implement comments with the keyword for that function.
+Otherwise implement comments with the keyword for the entire current file.
+
+The keyword and its definition are configured in `aider-todo-keyword-pair`."
   (interactive)
   (if (not buffer-file-name)
       (message "Current buffer is not visiting a file.")
@@ -109,6 +120,8 @@ Otherwise implement TODOs for the entire current file."
                          (buffer-substring-no-properties
                           (region-beginning)
                           (region-end))))
+           (keyword (car aider-todo-keyword-pair))
+           (definition (cdr aider-todo-keyword-pair))
            (initial-input
             (cond
              (region-text
@@ -118,11 +131,11 @@ Otherwise implement TODOs for the entire current file."
               (format "Please implement this comment in-place: '%s'. It is already inside current code. Please replace it with implementation. Keep the existing code structure and implement just this specific comment."
                       current-line))
              (function-name
-              (format "Please implement the TODO items in-place in function '%s'. Keep the existing code structure and only implement the TODOs in comments."
-                      function-name))
+              (format "Please implement all %s in-place in function '%s'. The %s are %s. Keep the existing code structure and only implement these marked items."
+                      keyword function-name keyword definition))
              (t
-              (format "Please implement all TODO items in-place in file '%s'. Keep the existing code structure and only implement the TODOs in comments."
-                      (file-name-nondirectory buffer-file-name)))))
+              (format "Please implement all %s in-place in file '%s'. The %s are %s. Keep the existing code structure and only implement these marked items."
+                      keyword (file-name-nondirectory buffer-file-name) keyword definition))))
            (user-command (aider-read-string "TODO implementation instruction: " initial-input)))
       (aider-current-file-command-and-switch "/architect " user-command))))
 
@@ -144,16 +157,19 @@ Otherwise:
       (cond
        ;; Test file case
        (is-test-file
-        (if function-name
-            (if (string-match-p "test" function-name)
-                (let* ((initial-input
-                       (format "Please implement test function '%s'. Follow standard unit testing practices and make it a meaningful test. Do not use Mock if possible."
-                              function-name))
-                      (user-command (aider-read-string "Test implementation instruction: " initial-input)))
-                  (aider-current-file-command-and-switch "/architect " user-command))
-              (message "Current function '%s' does not appear to be a test function." function-name))
-          (message "Please place cursor inside a test function to implement.")))
-       ;; Non-test file case
+        (if (and function-name (let ((case-fold-search nil))
+                                 (string-match-p "test" function-name))) ;; seems that the cursor is under a test function
+            ;; implement a unit-test function given context of source function
+            (let* ((initial-input
+                    (format "Please implement test function '%s'. Follow standard unit testing practices and make it a meaningful test. Do not use Mock if possible."
+                            function-name))
+                   (user-command (aider-read-string "Test implementation instruction: " initial-input)))
+              (aider-current-file-command-and-switch "/architect " user-command))
+          ;; in test file, but not in a test function. write unit-test first given description
+          (let* ((initial-input "Write test functions given the feature requirement description: ")
+                 (user-command (aider-read-string "Feature requirement for tests: " initial-input)))
+            (aider-current-file-command-and-switch "/architect " user-command))))
+       ;; Non-test file case, assuming it is main source code
        (t
         (let* ((common-instructions "Keep existing tests if there are. Follow standard unit testing practices. Do not use Mock if possible.")
                (initial-input
@@ -164,18 +180,6 @@ Otherwise:
                          (file-name-nondirectory buffer-file-name) common-instructions)))
                (user-command (aider-read-string "Unit test generation instruction: " initial-input)))
           (aider-current-file-command-and-switch "/architect " user-command)))))))
-
-;;;###autoload
-(defun aider-fix-failing-test-under-cursor ()
-  "Report the current test failure to aider and ask it to fix the code.
-This function assumes the cursor is on or inside a test function."
-  (interactive)
-  (if-let ((test-function-name (which-function)))
-      (let* ((initial-input (format "The test '%s' is failing. Please analyze and fix the code to make the test pass. Don't break any other test"
-                                   test-function-name))
-             (test-output (aider-read-string "Architect question: " initial-input)))
-        (aider-current-file-command-and-switch "/architect " test-output))
-    (message "No test function found at cursor position.")))
 
 (provide 'aider-code-change)
 
